fix overflow

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -5,14 +5,7 @@
     padding: 20px;
 }
 
-.text-content,
-.svg-container {
-    max-width: 1200px;
-    width: 100%;
-}
-
 .text-content {
-    margin-bottom: 20px;
     padding: 0 20px;
 }
 
