--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,8 @@ button {
 
 html,
 body {
+    height: 100%;
+    overflow: auto;
     margin: 0;
     padding: 0;
 }
